# witchcraft

./: .gitignore  Cargo.toml  Makefile  README.md  downloadweights.py  downloadxtr.py  nfcorpus-score.sh  requirements.txt  scifact-score.sh
.cargo/: config.toml
examples/: bnns_minimal.rs  pickbrain.rs
examples/pickbrain/: claude_code.rs  codex.rs  main.rs
skills/pickbrain/: SKILL.md
skills/pickbrain-codex/: SKILL.md
src/: assets.rs  claude-index.rs  claude_code.rs  db.rs  embedder.rs  fast_ops.rs  filter.rs  fused_matmul.rs  haarops.rs  lib.rs  main.rs  merger.rs  napi.rs  onnx_t5.rs  openvino_t5.rs  packops.rs  pickbrain.rs  priority.rs  quantized_t5.rs  schema.rs  t5.rs  tests.rs  types.rs  warp.rs
src/warp/: db.rs  haarops.rs  histogram.rs  packops.rs  tests.rs  types.rs
tools/compare-backends/: Cargo.toml
tools/compare-backends/src/: fast_ops.rs  main.rs  openvino_t5.rs  quantized_t5.rs
tools/ov-stress/src/: main.rs
tools/t5-bench/src/: fused_matmul.rs  quantized_t5.rs
ts/: .warp.cjs.swp  index.ts  warp.cjs
