[package]
name = "warp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "warp-cli"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
candle-metal-kernels = { version = "0.9.1", optional = true }
metal = { version = "0.27.0", features = ["mps"], optional = true }
ug-metal = { version = "0.4.0", optional = true }
libc = { version = "0.2.147", optional = true }
anyhow = "*"
serde = "*"
serde_json = "*"
candle-core = { version = "*", features = ["metal"] }
candle-nn = { version = "*", features = ["metal"] }
candle-transformers = "*"
tokenizers = "*"
tracing = "*"
serde_plain = "1.0.2"
rand = "0.9.1"
rusqlite = "0.35.0"
sha2 = "0.10.9"
min-heap = "1.0.0"
indicatif = "0.17.11"
csv = "1.3.1"
tempfile = "3.20.0"

napi = { version = "3.0.0-beta.9" }
napi-derive = { version = "3.0.0-beta.9" }
once_cell = "1.21.3"
zstd = "0.13.3"

[build-dependencies]
napi-build = "1"

[features]
embed-assets = []
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = ["dep:metal", "dep:candle-metal-kernels", "dep:ug-metal"]

#[dependencies.rusqlite]
#version = "0.35.0"
#features = ["bundled"]
